--- a/scss/partials/services/_services_main.scss
+++ b/scss/partials/services/_services_main.scss
@@ -63,35 +63,35 @@ $gasline-hov:".hov-bg-gasline";
 
 
 #{$repair-hov}{
-  background: url('https://s3-us-west-2.amazonaws.com/pointplumbing-2018/icons/services/hover/Repair_h.svg') no-repeat center;
+  background: url('https://d3grswip56n2ht.cloudfront.net/icons/services/hover/Repair_h.svg') no-repeat center;
 }
 
 #{$heater-hov} {
-  background:url('https://s3-us-west-2.amazonaws.com/pointplumbing-2018/icons/services/hover/Heater_h.svg') no-repeat center;
+  background:url('https://d3grswip56n2ht.cloudfront.net/icons/services/hover/Heater_h.svg') no-repeat center;
 }
 
 #{$reroute-hov} {
-  background:url('https://s3-us-west-2.amazonaws.com/pointplumbing-2018/icons/services/hover/Reroute_h.svg') no-repeat center;
+  background:url('https://d3grswip56n2ht.cloudfront.net/icons/services/hover/Reroute_h.svg') no-repeat center;
 }
 
 #{$water-hov} {
-  background:url('https://s3-us-west-2.amazonaws.com/pointplumbing-2018/icons/services/hover/Water_h.svg') no-repeat center;
+  background:url('https://d3grswip56n2ht.cloudfront.net/icons/services/hover/Water_h.svg') no-repeat center;
 }
 
 #{$waste-hov}{
-  background:url('https://s3-us-west-2.amazonaws.com/pointplumbing-2018/icons/services/hover/PM_h.svg') no-repeat center;
+  background:url('https://d3grswip56n2ht.cloudfront.net/icons/services/hover/PM_h.svg') no-repeat center;
 }
 
 #{$install-hov}{
-  background:url('https://s3-us-west-2.amazonaws.com/pointplumbing-2018/icons/services/hover/Install_h.svg') no-repeat center;
+  background:url('https://d3grswip56n2ht.cloudfront.net/icons/services/hover/Install_h.svg') no-repeat center;
 }
 
 #{$pressure-hov}{
-  background:url('https://s3-us-west-2.amazonaws.com/pointplumbing-2018/icons/services/hover/Pressure_h.svg') no-repeat center;
+  background:url('https://d3grswip56n2ht.cloudfront.net/icons/services/hover/Pressure_h.svg') no-repeat center;
 }
 
 #{$gasline-hov}{
-  background:url('https://s3-us-west-2.amazonaws.com/pointplumbing-2018/icons/services/hover/Gasline_h.svg') no-repeat center;
+  background:url('https://d3grswip56n2ht.cloudfront.net/icons/services/hover/Gasline_h.svg') no-repeat center;
 }
 
 .reveal-overlay{
